fix: Replace `limit` param with `page_size` in docs
