# spec/openapi.json
@@ -20,7 +20,7 @@
           "routes::v1::basic"
         ],
         "summary": "Get the `BasicOutput`s owned by the address considering resolved expiration\nunlock condition.",
-        "description": "Fetches basic outputs for a specified address, considering the resolved expiration unlock conditions.\n    The expiration unlock conditions determine access based on whether the latest checkpoint timestamp is\n    before or after the expiration time. Results can be paginated by providing optional `page` and `limit`\n    query parameters.\n\n    Before Expiration:\n    Objects are accessible to the `owner` if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `less than` the expiration time.\n\n    After Expiration:\n    Objects become accessible to the `return_address` if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `greater than or equal to` the expiration time.",
+        "description": "Fetches basic outputs for a specified address, considering the resolved expiration unlock conditions.\n    The expiration unlock conditions determine access based on whether the latest checkpoint timestamp is\n    before or after the expiration time. Results can be paginated by providing optional `page` and `page_size`\n    query parameters.\n\n    Before Expiration:\n    Objects are accessible to the `owner` if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `less than` the expiration time.\n\n    After Expiration:\n    Objects become accessible to the `return_address` if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `greater than or equal to` the expiration time.",
         "operationId": "resolved",
         "parameters": [
           {
@@ -44,7 +44,7 @@
             }
           },
           {
-            "name": "limit",
+            "name": "page_size",
             "in": "query",
             "description": "Number of items per page for pagination. Defaults to 10.",
             "required": false,
@@ -87,7 +87,7 @@
           "routes::v1::basic"
         ],
         "summary": "Get the `BasicOutput`s owned by the address",
-        "description": "Fetches basic outputs for a specified address with optional pagination.\n    It returns basic outputs with expiration unlock conditions that refer to the given address either as the `owner` or as the `return_address`.\n    Results can be paginated by providing optional `page` and `limit` query parameters.",
+        "description": "Fetches basic outputs for a specified address with optional pagination.\n    It returns basic outputs with expiration unlock conditions that refer to the given address either as the `owner` or as the `return_address`.\n    Results can be paginated by providing optional `page` and `page_size` query parameters.",
         "operationId": "basic",
         "parameters": [
           {
@@ -111,7 +111,7 @@
             }
           },
           {
-            "name": "limit",
+            "name": "page_size",
             "in": "query",
             "description": "Number of items per page for pagination. Defaults to 10.",
             "required": false,
@@ -154,7 +154,7 @@
           "routes::v1::nft"
         ],
         "summary": "Get the `NftOutput`s owned by the address considering resolved expiration\nunlock condition.",
-        "description": "Fetches NFT outputs for a specified address, considering the resolved expiration unlock conditions.\n    The expiration unlock conditions determine access based on whether the latest checkpoint timestamp is\n    before or after the expiration time. Results can be paginated by providing optional `page` and `limit`\n    query parameters.\n\n    Before Expiration:\n    NFT outputs are accessible to the **owner** if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `less than` the expiration time.\n\n    After Expiration:\n    NFT outputs become accessible to the **return_address** if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `greater than or equal to` the expiration time.",
+        "description": "Fetches NFT outputs for a specified address, considering the resolved expiration unlock conditions.\n    The expiration unlock conditions determine access based on whether the latest checkpoint timestamp is\n    before or after the expiration time. Results can be paginated by providing optional `page` and `page_size`\n    query parameters.\n\n    Before Expiration:\n    NFT outputs are accessible to the **owner** if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `less than` the expiration time.\n\n    After Expiration:\n    NFT outputs become accessible to the **return_address** if the latest checkpoint UNIX timestamp (in milliseconds)\n    is `greater than or equal to` the expiration time.",
         "operationId": "resolved",
         "parameters": [
           {
@@ -178,7 +178,7 @@
             }
           },
           {
-            "name": "limit",
+            "name": "page_size",
             "in": "query",
             "description": "Number of items per page for pagination. Defaults to 10.",
             "required": false,
@@ -221,7 +221,7 @@
           "routes::v1::nft"
         ],
         "summary": "Get the `NftOutput`s owned by the address",
-        "description": "Fetches NFT outputs for a specified address with optional pagination.\n    It returns NFT outputs with expiration unlock conditions that refer to the given address either as the `owner` or as the `return_address`.\n    Results can be paginated by providing optional `page` and `limit` query parameters.",
+        "description": "Fetches NFT outputs for a specified address with optional pagination.\n    It returns NFT outputs with expiration unlock conditions that refer to the given address either as the `owner` or as the `return_address`.\n    Results can be paginated by providing optional `page` and `page_size` query parameters.",
         "operationId": "nft",
         "parameters": [
           {
@@ -245,7 +245,7 @@
             }
           },
           {
-            "name": "limit",
+            "name": "page_size",
             "in": "query",
             "description": "Number of items per page for pagination. Defaults to 10.",
             "required": false,
